Added relaxation errors notebook

--- a/Basic 3 Qubit Code.ipynb
+++ b/Basic 3 Qubit Code.ipynb
@@ -355,7 +355,7 @@
    "id": "dc829f6b-4fee-4bb9-88ca-a4e8334f758f",
    "metadata": {},
    "source": [
-    "Now we can analyze the effectiveness of our 3-qubit bit-flip code by simulating its success rate for varying error probabilities. We also plot the 'theoretical' success rate $1 - (3p^2 - 2p^3)$, which is the probability we stay in the correctable space (i.e. probability of only 0 or 1 bit flips occuring."
+    "Now we can analyze the effectiveness of our 3-qubit bit-flip code by simulating its success rate for varying error probabilities. We also plot the 'theoretical' success rate $1 - (3p^2 - 2p^3)$, which is the probability we stay in the correctable space (i.e. probability of only 0 or 1 bit flips occuring)."
    ]
   },
   {
@@ -791,6 +791,14 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2981d24b-dd1c-47b5-a178-b54c3fb67fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
