Enhanced fidelity function, initiated simulation with random states, and included supporting Python file

--- a/Basic 3 Qubit Code.ipynb
+++ b/Basic 3 Qubit Code.ipynb
@@ -702,12 +702,23 @@
    "source": [
     "def fidelity(rho, sigma):\n",
     "    \"\"\"\n",
-    "    Compute the fidelity between two density matrices.\n",
+    "    Compute the fidelity between two density matrices, which quantifies the closeness of two quantum states.\n",
+    "\n",
+    "    Parameters:\n",
+    "    rho (np.ndarray): The first density matrix, representing a quantum state.\n",
+    "    sigma (np.ndarray): The second density matrix, representing a quantum state.\n",
+    "\n",
+    "    Returns:\n",
+    "    float: The fidelity, ranging from 0 to 1, where 1 indicates identical states.\n",
     "    \"\"\"\n",
-    "    sqrt_rho = np.sqrt(rho)\n",
+    "    # Compute the square root of the first density matrix\n",
+    "    sqrt_rho = sqrtm(rho)\n",
+    "    # Form the product of sqrt(rho), sigma, and sqrt(rho)\n",
     "    product = np.dot(sqrt_rho, np.dot(sigma, sqrt_rho))\n",
-    "    sqrt_product = np.sqrt(product)\n",
-    "    return (np.trace(sqrt_product))**2\n",
+    "    # Compute the square root of the product matrix\n",
+    "    sqrt_product = sqrtm(product)\n",
+    "    # The fidelity is the square of the trace of sqrt_product\n",
+    "    return np.real((np.trace(sqrt_product))**2) # Taking the real part to avoid any small imaginary parts due to numerical errors\n",
     "\n",
     "def rho_three_qubit_bit_code_simulation(initial_density_matrix, p, repetitions=1000):\n",
     "    fidelities = 0\n",
