Updated README and Added 3 Qubit Code with Depolarization Error Simulation

--- a/3 Qubit Code with Relaxation Errors.ipynb
+++ b/3 Qubit Code with Relaxation Errors.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "3bc4632f-2c9a-4985-9836-63d4663631a5",
    "metadata": {},
    "outputs": [
@@ -380,8 +380,8 @@
      "output_type": "stream",
      "text": [
       "(0.24841514207361717+0.5399497151322082j) (0.4714353071983122+0.6515312528528656j)\n",
-      "Execution Time: 108.29778957366943 seconds\n",
-      "Time taken:  108.29778957366943\n"
+      "Execution Time: 118.65906882286072 seconds\n",
+      "Time taken:  118.65906882286072\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "97c89cb5-1e49-4ccc-950d-05ff273310fa",
    "metadata": {},
    "outputs": [
@@ -438,6 +438,8 @@
    "id": "cf5a4e28-8d42-4da8-9600-4d9a90fa6d8d",
    "metadata": {},
    "source": [
+    "We can see the correction process actually introduces more errors than it corrects for.\n",
+    "\n",
     "#### Limitations:\n",
     "- We only consider relaxation errors (not 'phase damping') or other forms of errors\n",
     "- We consider two qubit gate times to be equal to single qubit gate times (in practice, two qubit gate times are slower)\n",
