Initial commit: Added surface code simulation notebook with cycle implementation, measurement strategy, error correction plan, and current challenges outlined.

--- a/3qubit_code/3 Qubit Code with Relaxation Errors.ipynb
+++ b/3qubit_code/3 Qubit Code with Relaxation Errors.ipynb
@@ -243,9 +243,13 @@
     "    for cycle in range(cycles):\n",
     "        ancilla_added_density = rho_add_ancilla_qubits(encoded_density)\n",
     "        result, rho_post = rho_measure_rightmost_2_qubits(ancilla_added_density)\n",
+    "        #Add a relaxaion error at this timestep\n",
     "        rho_post = relaxation_error(rho_post, T1=T1, t=Tg)\n",
+    "        \n",
     "        corrected_density = rho_correct_density_matrix(rho_post, result)\n",
+    "        #Add a relaxation error at this timestep\n",
     "        rho_post = relaxation_error(rho_post, T1=T1, t=Tg)\n",
+    "        \n",
     "        reshaped_array = corrected_density.reshape([8, 4, 8, 4])\n",
     "        final_density = np.einsum('jiki->jk', reshaped_array)\n",
     "        # fidelity_value = np.real(fidelity(ideal_density_matrix, final_density))\n",
