Added GKP codes notebook

--- a/Surface Code/Distance 3 Surface Code.ipynb
+++ b/Surface Code/Distance 3 Surface Code.ipynb
@@ -722,7 +722,10 @@
     "Currently, when trying to implement qiskits own quantum channels (e.g. `error = pauli_error([('X', 0.5 * p_err), ('Z', 0.5 * p_err), ('I', 1.0 - p_err)])`), this messes up the fidelity, and causes a different final state, even when no errors occur. This may be due to the method of executing the statevectors...\n",
     "\n",
     "Another frustrating issue is that qiskit doesn't (seem to) allow the execution of mid-circuit measurements during the computation, as measurements after this will 're-write' the previous measurement results (so if there is any probabilistic state collapse, the state could collapse to one state during the first measurement, then a different one during the second measurement). This makes it hard to extract error syndromes during the computation, and as we've done, we have to extract all error syndromes at the end of $n$\n",
-    " cycles."
+    " cycles.\n",
+    "\n",
+    "\n",
+    " Related question on stack exchange with a potential (inefficient) solution to the issue [here](https://quantumcomputing.stackexchange.com/questions/32289/conditional-unitary-based-on-output-of-a-function) ."
    ]
   }
  ],
@@ -742,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
