set up GKP-repetition code circuit

--- a/O2O/O2O.ipynb
+++ b/O2O/O2O.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,61 @@
    "metadata": {},
    "source": [
     "### GKP-Repetition Code\n",
-    "The GKP repetition code (see [here](https://arxiv.org/abs/1903.12615) for further details) encodes a logical oscillator into two physical oscillators, i.e. one data oscillator and one ancilla oscillator (encoded in the GKP qunaught state). Error correction requires SUM gates (```sf.ops.CXgate```)  and homodyne measurements."
+    "The GKP repetition code (see [here](https://arxiv.org/abs/1903.12615) for further details) encodes a logical oscillator into two physical oscillators, i.e. one data oscillator and one ancilla oscillator (encoded in the GKP qunaught state). Error correction requires SUM gates (```sf.ops.CXgate```)  and homodyne measurements.\n",
+    "\n",
+    "Let us first write two decoding functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.5249193799654228\n"
+     ]
+    }
+   ],
+   "source": [
+    "def agn_sample(variance):\n",
+    "    \"\"\"\n",
+    "    Samples a single displacement from an Additive Gaussian Noise (AGN) channel.\n",
+    "    \"\"\"\n",
+    "    if variance < 0:\n",
+    "        raise ValueError(\"Variance must be non-negative.\")\n",
+    "    \n",
+    "    # Generate a single Gaussian sample with mean = 0 and variance = sigma^2\n",
+    "    sample = np.random.normal(loc=0.0, scale=np.sqrt(variance))\n",
+    "    return sample\n",
+    "\n",
+    "# Define the modular reduction function using sf.math\n",
+    "def reduce_modulo(value, modulus=np.sqrt(2 * np.pi)):\n",
+    "    \"\"\"\n",
+    "    Reduce the input value modulo the specified modulus.\n",
+    "    \"\"\"\n",
+    "    nearest_multiple = sf.math.floor(value / modulus + 0.5)  # Closest integer to value/modulus\n",
+    "    reduced_value = value - nearest_multiple * modulus\n",
+    "    return reduced_value\n",
+    "\n",
+    "def decode_q(measurement, modulus=np.sqrt(2 * np.pi)):\n",
+    "    \"\"\"\n",
+    "    Compute the redisplacement value for the position quadrature.\n",
+    "    \"\"\"\n",
+    "    reduced_value = reduce_modulo(measurement, modulus) \n",
+    "    z1 = 0 ##How to obtain Z1?\n",
+    "    redisplacement = -0.5 * (reduced_value + z1)\n",
+    "    return redisplacement\n",
+    "\n",
+    "def decode_p(measurement, modulus=np.sqrt(2 * np.pi)):\n",
+    "    \"\"\"\n",
+    "    Compute the redisplacement value for the momentum quadrature.\n",
+    "    \"\"\"\n",
+    "    reduced_value = reduce_modulo(measurement, modulus)\n",
+    "    redisplacement = reduced_value\n",
+    "    return redisplacement"
    ]
   },
   {
@@ -170,29 +224,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "var = 0.1\n",
+    "\n",
     "prog = sf.Program(2)\n",
     "\n",
     "with prog.context as q:\n",
     "    #Initialize in arbitrary state\n",
-    "    Fock(1) | q[0]\n",
-    "    Ket(qunaught_coeffs) | q[1]\n",
+    "    Fock(2) | q[0]\n",
+    "    Fock(3) | q[1]\n",
+    "    # Ket(qunaught_coeffs) | q[1]\n",
     "\n",
     "    #Encode\n",
     "    CXgate() | (q[0], q[1])\n",
     "\n",
-    "    #AGN\n",
+    "    #AGN channel\n",
+    "    for mode in range(0,2):\n",
+    "        Dgate(agn_sample(variance=var), phi = 0) | q[mode] #sigma_q\n",
+    "        Dgate(agn_sample(variance=var), phi = np.pi/2) | q[mode] #sigma_p\n",
     "\n",
-    "    #Measure and decode\n",
     "\n",
-    "\n"
+    "    #Decode\n",
+    "    CXgate().H | (q[0], q[1])  # Apply the Hermitian conjugate (inverse)\n",
+    "\n",
+    "    #Measure X and apply corrections\n",
+    "    CXgate() | (q[0], q[1])\n",
+    "    MeasureX | q[1]\n",
+    "    Dgate(decode_q(q[1].par)) | q[0]\n",
+    "\n",
+    "    #Measure P and apply corrections\n",
+    "    CXgate().H | (q[1], q[0])  \n",
+    "    MeasureP | q[1]\n",
+    "    Dgate(decode_p(q[1].par), phi = np.pi/2) | q[0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "eng = sf.Engine(\"fock\", backend_options={\"cutoff_dim\": 10})\n",
+    "result = eng.run(prog)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "strawberryfields",
+   "display_name": "Python (Strawberry Fields)",
    "language": "python",
-   "name": "python3"
+   "name": "strawberryfields"
   },
   "language_info": {
    "codemirror_mode": {
