Add (broken) fidelity calc

--- a/O2O/O2O.ipynb
+++ b/O2O/O2O.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,61 +161,7 @@
    "metadata": {},
    "source": [
     "### GKP-Repetition Code\n",
-    "The GKP repetition code (see [here](https://arxiv.org/abs/1903.12615) for further details) encodes a logical oscillator into two physical oscillators, i.e. one data oscillator and one ancilla oscillator (encoded in the GKP qunaught state). Error correction requires SUM gates (```sf.ops.CXgate```)  and homodyne measurements.\n",
-    "\n",
-    "Let us first write two decoding functions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.5249193799654228\n"
-     ]
-    }
-   ],
-   "source": [
-    "def agn_sample(variance):\n",
-    "    \"\"\"\n",
-    "    Samples a single displacement from an Additive Gaussian Noise (AGN) channel.\n",
-    "    \"\"\"\n",
-    "    if variance < 0:\n",
-    "        raise ValueError(\"Variance must be non-negative.\")\n",
-    "    \n",
-    "    # Generate a single Gaussian sample with mean = 0 and variance = sigma^2\n",
-    "    sample = np.random.normal(loc=0.0, scale=np.sqrt(variance))\n",
-    "    return sample\n",
-    "\n",
-    "# Define the modular reduction function using sf.math\n",
-    "def reduce_modulo(value, modulus=np.sqrt(2 * np.pi)):\n",
-    "    \"\"\"\n",
-    "    Reduce the input value modulo the specified modulus.\n",
-    "    \"\"\"\n",
-    "    nearest_multiple = sf.math.floor(value / modulus + 0.5)  # Closest integer to value/modulus\n",
-    "    reduced_value = value - nearest_multiple * modulus\n",
-    "    return reduced_value\n",
-    "\n",
-    "def decode_q(measurement, modulus=np.sqrt(2 * np.pi)):\n",
-    "    \"\"\"\n",
-    "    Compute the redisplacement value for the position quadrature.\n",
-    "    \"\"\"\n",
-    "    reduced_value = reduce_modulo(measurement, modulus) \n",
-    "    z1 = 0 ##How to obtain Z1?\n",
-    "    redisplacement = -0.5 * (reduced_value + z1)\n",
-    "    return redisplacement\n",
-    "\n",
-    "def decode_p(measurement, modulus=np.sqrt(2 * np.pi)):\n",
-    "    \"\"\"\n",
-    "    Compute the redisplacement value for the momentum quadrature.\n",
-    "    \"\"\"\n",
-    "    reduced_value = reduce_modulo(measurement, modulus)\n",
-    "    redisplacement = reduced_value\n",
-    "    return redisplacement"
+    "The GKP repetition code (see [here](https://arxiv.org/abs/1903.12615) for further details) encodes a logical oscillator into two physical oscillators, i.e. one data oscillator and one ancilla oscillator (encoded in the GKP qunaught state). Error correction requires SUM gates (```sf.ops.CXgate```)  and homodyne measurements.\n"
    ]
   },
   {
@@ -224,42 +170,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var = 0.1\n",
+    "# Number of samples per variance value\n",
+    "n_shots = 100\n",
     "\n",
-    "prog = sf.Program(2)\n",
+    "input_variances = np.linspace(0.1, 0.5, 5)  # Range of input variances\n",
+    "fidelities_vacuum = []  # To store averaged fidelities with the vacuum state\n",
     "\n",
-    "with prog.context as q:\n",
-    "    #Initialize in arbitrary state\n",
-    "    Fock(2) | q[0]\n",
-    "    Fock(3) | q[1]\n",
-    "    # Ket(qunaught_coeffs) | q[1]\n",
+    "q = np.linspace(-3.5, 3.5, 200)\n",
+    "eps = 0.019\n",
+    "n_max = 30\n",
+    "_, qunaught_coeffs = qunaught_fock(eps, q, n_max, norm=True)\n",
     "\n",
-    "    #Encode\n",
-    "    CXgate() | (q[0], q[1])\n",
+    "for var in input_variances:\n",
+    "    fidelity_samples = []  # Temporary storage for fidelities in all shots\n",
     "\n",
-    "    #AGN channel\n",
-    "    for mode in range(0,2):\n",
-    "        Dgate(agn_sample(variance=var), phi = 0) | q[mode] #sigma_q\n",
-    "        Dgate(agn_sample(variance=var), phi = np.pi/2) | q[mode] #sigma_p\n",
+    "    for _ in range(n_shots):\n",
+    "        prog = sf.Program(2)\n",
     "\n",
+    "        with prog.context as q:\n",
+    "            Fock(0) | q[0] #data mode\n",
+    "            Ket(qunaught_coeffs) | q[1] #ancilla mode\n",
     "\n",
-    "    #Decode\n",
-    "    CXgate().H | (q[0], q[1])  # Apply the Hermitian conjugate (inverse)\n",
+    "            # Encode\n",
+    "            CXgate() | (q[0], q[1])\n",
     "\n",
-    "    #Measure X and apply corrections\n",
-    "    CXgate() | (q[0], q[1])\n",
-    "    MeasureX | q[1]\n",
-    "    Dgate(decode_q(q[1].par)) | q[0]\n",
+    "            # AGN channel\n",
+    "            for mode in range(2):\n",
+    "                Dgate(agn_sample(variance=var), phi=0) | q[mode]  # sigma_q\n",
+    "                Dgate(agn_sample(variance=var), phi=np.pi/2) | q[mode]  # sigma_p\n",
     "\n",
-    "    #Measure P and apply corrections\n",
-    "    CXgate().H | (q[1], q[0])  \n",
-    "    MeasureP | q[1]\n",
-    "    Dgate(decode_p(q[1].par), phi = np.pi/2) | q[0]\n",
+    "            # Decode\n",
+    "            CXgate().H | (q[0], q[1])\n",
     "\n",
+    "            # Measure X and apply corrections\n",
+    "            CXgate() | (q[0], q[1])\n",
+    "            MeasureX | q[1]\n",
+    "            Dgate(decode_q(q[1].par)) | q[0]\n",
     "\n",
+    "            # Measure P and apply corrections\n",
+    "            CXgate().H | (q[1], q[0])  # inverse sum\n",
+    "            MeasureP | q[1]\n",
+    "            Dgate(decode_p(q[1].par), phi=np.pi/2) | q[0]\n",
     "\n",
-    "eng = sf.Engine(\"fock\", backend_options={\"cutoff_dim\": 10})\n",
-    "result = eng.run(prog)"
+    "        eng = sf.Engine(\"fock\", backend_options={\"cutoff_dim\": n_max + 1})\n",
+    "        result = eng.run(prog)\n",
+    "\n",
+    "        # Compute the fidelity of mode 0 with the vacuum state\n",
+    "        fidelity = result.state.fidelity_vacuum(mode=0)\n",
+    "\n",
+    "        # Store result from this shot\n",
+    "        fidelity_samples.append(fidelity)\n",
+    "\n",
+    "    # Average fidelities over all shots for this variance value\n",
+    "    fidelities_vacuum.append(np.mean(fidelity_samples))\n",
+    "\n",
+    "# Store results for plotting\n",
+    "results = {\n",
+    "    \"input_variances\": input_variances,\n",
+    "    \"fidelities_vacuum\": fidelities_vacuum,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fidelities_vacuum_baseline = []  # To store averaged fidelities for physical mode\n",
+    "\n",
+    "for var in input_variances:\n",
+    "    fidelity_samples_baseline = []  # Temporary storage for fidelities in all shots\n",
+    "\n",
+    "    for _ in range(n_shots):\n",
+    "        prog = sf.Program(1)  \n",
+    "\n",
+    "        with prog.context as q:\n",
+    "            # Initialize in the vacuum state\n",
+    "            Fock(0) | q[0]\n",
+    "\n",
+    "            # AGN channel\n",
+    "            Dgate(agn_sample(variance=var), phi=0) | q[0]  # sigma_q\n",
+    "            Dgate(agn_sample(variance=var), phi=np.pi/2) | q[0]  # sigma_p\n",
+    "\n",
+    "        eng = sf.Engine(\"fock\", backend_options={\"cutoff_dim\": n_max + 1})\n",
+    "        result = eng.run(prog)\n",
+    "\n",
+    "        # Compute the fidelity of the mode with the vacuum state\n",
+    "        fidelity = result.state.fidelity_vacuum(mode=0)\n",
+    "\n",
+    "        # Store result from this shot\n",
+    "        fidelity_samples_baseline.append(fidelity)\n",
+    "\n",
+    "    # Average fidelities over all shots for this variance value\n",
+    "    fidelities_vacuum_baseline.append(np.mean(fidelity_samples_baseline))\n",
+    "\n",
+    "# Store results for plotting\n",
+    "results_baseline = {\n",
+    "    \"input_variances\": input_variances,\n",
+    "    \"fidelities_vacuum_baseline\": fidelities_vacuum_baseline,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Plotting the fidelity vs input variance\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "# # Plot fidelity with the vacuum state (GKP repetition code)\n",
+    "# plt.plot(\n",
+    "#     results[\"input_variances\"],\n",
+    "#     results[\"fidelities_vacuum\"],\n",
+    "#     marker=\"o\",\n",
+    "#     label=\"GKP Repetition Code\",\n",
+    "# )\n",
+    "\n",
+    "# # Plot fidelity with the baseline vacuum state (no encoding/decoding)\n",
+    "# plt.plot(\n",
+    "#     results_baseline[\"input_variances\"],\n",
+    "#     results_baseline[\"fidelities_vacuum_baseline\"],\n",
+    "#     marker=\"s\",\n",
+    "#     linestyle=\"--\",\n",
+    "#     label=\"Baseline Vacuum State\",\n",
+    "# )\n",
+    "\n",
+    "# # Customize the plot\n",
+    "# plt.title(\"Fidelity vs Input Variance: GKP Code vs Baseline Vacuum\")\n",
+    "# plt.xlabel(\"Input Variance\")\n",
+    "# plt.ylabel(\"Fidelity\")\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "\n",
+    "# # Show the plot\n",
+    "# plt.show()\n"
    ]
   }
  ],
